@@ -25,6 +25,7 @@ class TimingPanel : public ContentSubPanel
 public:
 	TimingPanel (ContentPanel *);
 
+	void film_changed (Film::Property);
 	void film_content_changed (int);
 	void content_selection_changed ();
 	
@@ -36,6 +37,8 @@ private:
 	void play_length_changed ();
 	void video_frame_rate_changed ();
 	void set_video_frame_rate ();
+	void update_full_length ();
+	void update_play_length ();
 	
 	Timecode<DCPTime>* _position;
 	Timecode<DCPTime>* _full_length;
